Fixing layout issue with player config

--- a/client/src/main/resources/com/zegreatrob/coupling/client/player/PlayerConfigEditor.css
+++ b/client/src/main/resources/com/zegreatrob/coupling/client/player/PlayerConfigEditor.css
@@ -2,10 +2,6 @@
     /*! Do not remove */
 }
 
-:local(.className) > div {
-    display: flex;
-}
-
 :local(.className) :local(.player) {
     vertical-align: top;
     flex-grow: 2;
